--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
        .assinatura{
         text-align: right;
        }
+       .saibamais{
+        text-align: right;
+       }
     </style>
 </head>
 <body>
@@ -60,6 +63,8 @@
         <li>Centro de Artesanato de Pernambuco</li>
         <img src="armazens-do-porto-recife-4.jpg" alt="armazem" width="250px" height="200px">
         <h4>São diversos bares, sorveterias e restaurantes, além de um centro de artesanato, às margens do encontro do Rio Capibaribe com o mar. A área livre proporciona ainda vista privilegiada para o Parque de Esculturas de Francisco Brennand. A previsão é de que novos estabelecimentos ocupem o espaço em breve, incluindo lojas.</h4>
+    
+        <h3 class="saibamais"><a href="pacodofrevo.html">Clique aqui para conhecer mais pontos turisticos do Recife Antigo?</a></h3>
     </main>
 
     <footer>
