--- a/pacodofrevo.html
+++ b/pacodofrevo.html
@@ -1,72 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mais do Recife Antigo </title>
-    <style>
-        body{
-         background-color: whitesmoke;
-         margin: 0;
-         box-sizing: border-box;
-        }
-        .titulo{
-         text-align: center;
-         text-decoration: currentColor;
-        }
-        .comentario{
-         margin: 0;
-         text-align: center;
-         color: crimson;
-         border: 5px solid rgba(255, 255, 255, 0.801);
-        }
-        li{
-         text-transform: initial;
-         color: blue;
-         text-decoration-line: underline;
-        }
-        ul{
-         margin: 0;
-         padding: 0;
-        }
-        ul li{
-         list-style: none;
-         margin: 10px;
-         display: inline;
-         list-style-position: center;
-        }
-        .assinatura{
-         text-align: right;
-        }
-     </style>
+    <title>Conheça mais do Recife Antigo</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <head>
-        <!--Cabeçalho comentario-->
-        <h3 class="comentario">O nome oficial é Bairro do Recife, mas todo mundo chama mesmo é de Recife Antigo – ou, quando começa a intimidade, só “Antigo” mesmo. Charles Darwin, Santos Dumont e Dom Pedro II estão entre os personagens ilustres que já desembarcaram num dos pedaços mais interessantes da capital pernambucana, e você não vai perder a chance de entrar pra essa lista, né? </h3>
-    </head>
+    <header>
+         <!--Cabeçalho com foto e comentario-->
+         <nav class="menu">
+            <a href="index.html">Ver mais</a>
+            <a href="https://www.google.com.br/maps/place/Recife+-+PE/@-8.0421676,-35.0078895,12z/data=!3m1!4b1!4m5!3m4!1s0x7ab196f88c446e5:0x3c9ef52922447fd4!8m2!3d-8.0577401!4d-34.8829629">Endereço</a>
+        </nav>
+    </header>
+
+    <h3 class="titulo">Conheça mais dois pontos turisticos do Recife Antigo</h3>
     <main>
-        <h3 class="titulo">Conheça mais dois pontos turisticos do Recife Antigo</h3>
-        <li>Paço do Frevo</li>
-        <img src="paco_do_frevo_2.jpg" alt="pacodofrevo" width="500px" height="300px">
-        <h4>O Paço do Frevo é um espaço cultural dedicado à difusão, pesquisa, lazer e formação nas áreas da dança e música do frevo localizado na cidade do Recife, capital de Pernambuco, Brasil.</h4>
+
+        <b class="titulo2" style="order: 0;">Paço do Frevo</b>
+        <div class="conteudo" style="order: 3;">
+        <div class="imagens">
+        <img src="paco_do_frevo_2.jpg" alt="pacodofrevo" width="300px" height="200px"></div>
+        <h4>Um amplo espaço instalado no antigo armazém 11 com exposição e venda de peças artesanais produzidas por artesãos pernambucanos.
+           <br> O centro abre de segunda à sábado (9:00-19:00) e no domingo (10:00-16:00).
+           <br><br><button><a href="https://www.google.com.br/maps/place/Pa%C3%A7o+do+Frevo/@-8.0614339,-34.8737288,17z/data=!3m1!4b1!4m5!3m4!1s0x7ab18a36b5ed785:0xaca9c7fdd427b964!8m2!3d-8.0614392!4d-34.8715401" target="_blank" rel="noopener noreferrer">Endereço</a></button>
+        </div>
         
-        <li>Parques das esculturas - Ricardo Brennand</li>
-        <img src="parque_esculturas.jpg" alt="esculturas" width="500px" height="300px">
-        <h4>O Parque das Esculturas Francisco Brennand é um museu de arte a céu aberto localizado na cidade do Recife, capital do estado brasileiro de Pernambuco. Constitui um dos principais feitos do artista plástico pernambucano Francisco Brennand.</h4>
+        <b class="titulo3" style="order: 2;">Parques das esculturas - Ricardo Brennand</b>
+        <div class="conteudo1" style="order: 4;">
+        <div class="imagens" ><img src="parque_esculturas.jpg" alt="parque_esculturas" width="280px" height="200px"></div>
+        <h4>O Parque das Esculturas Francisco Brennand é um museu de arte a céu aberto localizado na cidade do Recife, capital do estado brasileiro de Pernambuco. Constitui um dos principais feitos do artista plástico pernambucano Francisco Brennand.
+            <br><br><button><a href="https://www.google.com.br/maps/place/Parque+das+Esculturas+Francisco+Brennand/@-8.0639427,-34.8691307,15z/data=!4m5!3m4!1s0x0:0x454cb7e8f13d5736!8m2!3d-8.0639427!4d-34.8691307" target="_blank" rel="noopener noreferrer">Endereço</a></button>
+        </h4>
+        </div>
+
     </main>
 
+    <section class="sobre">
+        <b>Nos siga nas redes sociais:</b>
+        </div>
+    </section>
     <footer>
-    <!--Rodapé com dados do autor e contatos-->
-        <ul>
-            <h5>Nos siga nas redes sociais</h5>
-            <li><a href="https://www.instagram.com/deborarl.albuquerque/?hl=pt-br"><img src="instagram.png" alt="instagram" width="35px" height="35px"></a></li>
-            <li><a href="https://www.linkedin.com/in/d%C3%A9bora-albuquerque-b5771518b"><img src="linkedin.png" alt="linkdin" width="35px" height="35px"></a></li>
-            <li><a href="https://github.com/Deborarla"><img src="github.png" alt="github" width="35px" height="35px"></a></li>
-
-            <h5 class="assinatura">Criado por Débora albuquerque</h5>
-        </ul>
-    </footer>
+        <!--Rodapé com dados do autor e contatos-->
+        <a href="https://www.instagram.com/deborarl.albuquerque/?hl=pt-br"><img src="instagram.png" alt="instagram" width="35px" height="35px"></a>
+        <a href="https://www.linkedin.com/in/d%C3%A9bora-albuquerque-b5771518b"><img src="linkedin.png" alt="linkdin" width="35px" height="35px"></a>
+        <a href="https://github.com/Deborarla"><img src="github.png" alt="github" width="35px" height="35px"></a>
+        
+        <h5 class="assinatura">Criado por Débora albuquerque</h5>
+        </footer>
 </body>
 </html>
